git-repositories/gitops-myenvironment-myapp/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-app
spec:
  gateways:
    - my-app
  http:
    - name: primary
      route:
        - destination:
            host: my-app
          weight: 100
        - destination:
            host: my-app-canary
          weight: 0
